{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 2080,
  "lineage": "ffd003b2-7d8e-a0cf-91ba-5f8a107b121b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sqlserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01c7c8d1253ac019b",
            "arn": "arn:aws:ec2:us-east-1:007924758087:instance/i-0f11d60a8be6c6043",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gg9-eks-sqlserver-20260108165534118300000008",
            "id": "i-0f11d60a8be6c6043",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb5de56341b33a18",
            "private_dns": "ip-10-0-101-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.95",
            "public_dns": "ec2-35-170-51-72.compute-1.amazonaws.com",
            "public_ip": "35.170.51.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:007924758087:key/1a3fce34-274e-4eb3-9eab-6a0a766d036e",
                "throughput": 125,
                "volume_id": "vol-040996b609e801144",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0693b6c4cf46aada8",
            "tags": {
              "Name": "gg9-eks-sqlserver-poc"
            },
            "tags_all": {
              "Name": "gg9-eks-sqlserver-poc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02194f7f37a1a1690"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.sqlserver",
            "aws_iam_role.sqlserver",
            "aws_security_group.sqlserver",
            "data.aws_ami.sqlserver",
            "module.vpc_east.aws_cloudwatch_log_group.flow_log",
            "module.vpc_east.aws_customer_gateway.this",
            "module.vpc_east.aws_db_subnet_group.database",
            "module.vpc_east.aws_default_network_acl.this",
            "module.vpc_east.aws_default_route_table.default",
            "module.vpc_east.aws_default_security_group.this",
            "module.vpc_east.aws_default_vpc.this",
            "module.vpc_east.aws_egress_only_internet_gateway.this",
            "module.vpc_east.aws_eip.nat",
            "module.vpc_east.aws_elasticache_subnet_group.elasticache",
            "module.vpc_east.aws_flow_log.this",
            "module.vpc_east.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_east.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_east.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_east.aws_internet_gateway.this",
            "module.vpc_east.aws_nat_gateway.this",
            "module.vpc_east.aws_network_acl.database",
            "module.vpc_east.aws_network_acl.elasticache",
            "module.vpc_east.aws_network_acl.intra",
            "module.vpc_east.aws_network_acl.outpost",
            "module.vpc_east.aws_network_acl.private",
            "module.vpc_east.aws_network_acl.public",
            "module.vpc_east.aws_network_acl.redshift",
            "module.vpc_east.aws_network_acl_rule.database_inbound",
            "module.vpc_east.aws_network_acl_rule.database_outbound",
            "module.vpc_east.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_east.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_east.aws_network_acl_rule.intra_inbound",
            "module.vpc_east.aws_network_acl_rule.intra_outbound",
            "module.vpc_east.aws_network_acl_rule.outpost_inbound",
            "module.vpc_east.aws_network_acl_rule.outpost_outbound",
            "module.vpc_east.aws_network_acl_rule.private_inbound",
            "module.vpc_east.aws_network_acl_rule.private_outbound",
            "module.vpc_east.aws_network_acl_rule.public_inbound",
            "module.vpc_east.aws_network_acl_rule.public_outbound",
            "module.vpc_east.aws_network_acl_rule.redshift_inbound",
            "module.vpc_east.aws_network_acl_rule.redshift_outbound",
            "module.vpc_east.aws_redshift_subnet_group.redshift",
            "module.vpc_east.aws_route.database_dns64_nat_gateway",
            "module.vpc_east.aws_route.database_internet_gateway",
            "module.vpc_east.aws_route.database_ipv6_egress",
            "module.vpc_east.aws_route.database_nat_gateway",
            "module.vpc_east.aws_route.private_dns64_nat_gateway",
            "module.vpc_east.aws_route.private_ipv6_egress",
            "module.vpc_east.aws_route.private_nat_gateway",
            "module.vpc_east.aws_route.public_internet_gateway",
            "module.vpc_east.aws_route.public_internet_gateway_ipv6",
            "module.vpc_east.aws_route_table.database",
            "module.vpc_east.aws_route_table.elasticache",
            "module.vpc_east.aws_route_table.intra",
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_route_table.redshift",
            "module.vpc_east.aws_route_table_association.database",
            "module.vpc_east.aws_route_table_association.elasticache",
            "module.vpc_east.aws_route_table_association.intra",
            "module.vpc_east.aws_route_table_association.outpost",
            "module.vpc_east.aws_route_table_association.private",
            "module.vpc_east.aws_route_table_association.public",
            "module.vpc_east.aws_route_table_association.redshift",
            "module.vpc_east.aws_route_table_association.redshift_public",
            "module.vpc_east.aws_subnet.database",
            "module.vpc_east.aws_subnet.elasticache",
            "module.vpc_east.aws_subnet.intra",
            "module.vpc_east.aws_subnet.outpost",
            "module.vpc_east.aws_subnet.private",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_subnet.redshift",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_east.aws_vpc_block_public_access_options.this",
            "module.vpc_east.aws_vpc_dhcp_options.this",
            "module.vpc_east.aws_vpc_dhcp_options_association.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_east.aws_vpn_gateway.this",
            "module.vpc_east.aws_vpn_gateway_attachment.this",
            "module.vpc_east.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_east.aws_vpn_gateway_route_propagation.private",
            "module.vpc_east.aws_vpn_gateway_route_propagation.public",
            "module.vpc_east.data.aws_caller_identity.current",
            "module.vpc_east.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_east.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_east.data.aws_partition.current",
            "module.vpc_east.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_private_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fdbb376c12a82d903322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fdbb376c12a82d90",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f756178fb788789d3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f756178fb788789d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-046fd808969cabecf3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-046fd808969cabecf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_public_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-014824bfbcf5792043322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014824bfbcf579204",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "west_private_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06d2580b4131a1c6f179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06d2580b4131a1c6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01eece8d18d46b93b179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01eece8d18d46b93b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01693fcf202e2906b179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01693fcf202e2906b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "west_public_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fa6514a88a22f18b179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa6514a88a22f18b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sqlserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:security-group/sg-02194f7f37a1a1690",
            "description": "Security group for SQL Server POC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02194f7f37a1a1690",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP access",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SQL Server from VPC",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "gg9-eks-sqlserver-20260108165545821200000017",
            "name_prefix": "gg9-eks-sqlserver-",
            "owner_id": "007924758087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gg9-eks-sqlserver"
            },
            "tags_all": {
              "Name": "gg9-eks-sqlserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "east_allow_west_gridgain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/16"
            ],
            "description": "Allow GridGain client port from West VPC",
            "from_port": 10800,
            "id": "sgrule-2446918791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-04a734937f35276ff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10800,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "west_allow_east_gridgain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow GridGain client port from East VPC",
            "from_port": 10800,
            "id": "sgrule-3484424891",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-000d862499e51b76b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10800,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.node",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "east_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": false,
            "id": "pcx-0f320faf02204bed2",
            "peer_owner_id": "007924758087",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0384a3cc2b1272533",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "gg9-eks-east-west-peering",
              "Side": "Requester"
            },
            "tags_all": {
              "Name": "gg9-eks-east-west-peering",
              "Side": "Requester"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "west_accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f320faf02204bed2",
            "peer_owner_id": "007924758087",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0384a3cc2b1272533",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "gg9-eks-east-west-peering",
              "Side": "Accepter"
            },
            "tags_all": {
              "Name": "gg9-eks-east-west-peering",
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0bc4de85f36e89340",
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "east_options",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0f320faf02204bed2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "west_options",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0f320faf02204bed2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.east_west",
            "aws_vpc_peering_connection_accepter.west_accept",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "gg9",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "gridgain",
            "metadata": [
              {
                "generation": 0,
                "name": "gridgain",
                "resource_version": "1571",
                "uid": "892f99e1-9af1-4438-963d-114b1fd0c0e3"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "gridgain"
          },
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_addon.before_compute",
            "module.eks.aws_eks_addon.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_identity_provider_config.this",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_policy.custom",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.additional",
            "module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.aws_iam_role_policy_attachment.custom",
            "module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_eks_addon_version.this",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.custom",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.data.tls_certificate.this",
            "module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.fargate_profile.data.aws_region.current",
            "module.eks.module.kms.aws_kms_alias.this",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_grant.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.time_sleep.this",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "gg9_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "gridgain",
            "metadata": [
              {
                "generation": 0,
                "name": "gridgain",
                "resource_version": "1534",
                "uid": "f12816fd-f854-4ed7-83cd-146c5298111a"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "gridgain"
          },
          "dependencies": [
            "module.eks_west.aws_cloudwatch_log_group.this",
            "module.eks_west.aws_ec2_tag.cluster_primary_security_group",
            "module.eks_west.aws_eks_access_entry.this",
            "module.eks_west.aws_eks_access_policy_association.this",
            "module.eks_west.aws_eks_addon.before_compute",
            "module.eks_west.aws_eks_addon.this",
            "module.eks_west.aws_eks_cluster.this",
            "module.eks_west.aws_eks_identity_provider_config.this",
            "module.eks_west.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks_west.aws_iam_policy.cluster_encryption",
            "module.eks_west.aws_iam_policy.cni_ipv6_policy",
            "module.eks_west.aws_iam_policy.custom",
            "module.eks_west.aws_iam_role.eks_auto",
            "module.eks_west.aws_iam_role.this",
            "module.eks_west.aws_iam_role_policy_attachment.additional",
            "module.eks_west.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks_west.aws_iam_role_policy_attachment.custom",
            "module.eks_west.aws_iam_role_policy_attachment.eks_auto",
            "module.eks_west.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.eks_west.aws_iam_role_policy_attachment.this",
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.eks_west.aws_security_group_rule.cluster",
            "module.eks_west.aws_security_group_rule.node",
            "module.eks_west.data.aws_caller_identity.current",
            "module.eks_west.data.aws_eks_addon_version.this",
            "module.eks_west.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_west.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_west.data.aws_iam_policy_document.custom",
            "module.eks_west.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks_west.data.aws_iam_session_context.current",
            "module.eks_west.data.aws_partition.current",
            "module.eks_west.data.tls_certificate.this",
            "module.eks_west.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks_west.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks_west.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks_west.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.eks_west.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks_west.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks_west.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks_west.module.eks_managed_node_group.aws_placement_group.this",
            "module.eks_west.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks_west.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks_west.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks_west.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_west.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks_west.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks_west.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks_west.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.eks_west.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks_west.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks_west.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks_west.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks_west.module.fargate_profile.aws_iam_role.this",
            "module.eks_west.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks_west.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks_west.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks_west.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks_west.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_west.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks_west.module.fargate_profile.data.aws_partition.current",
            "module.eks_west.module.fargate_profile.data.aws_region.current",
            "module.eks_west.module.kms.aws_kms_alias.this",
            "module.eks_west.module.kms.aws_kms_external_key.this",
            "module.eks_west.module.kms.aws_kms_grant.this",
            "module.eks_west.module.kms.aws_kms_key.this",
            "module.eks_west.module.kms.aws_kms_replica_external_key.this",
            "module.eks_west.module.kms.aws_kms_replica_key.this",
            "module.eks_west.module.kms.data.aws_caller_identity.current",
            "module.eks_west.module.kms.data.aws_iam_policy_document.this",
            "module.eks_west.module.kms.data.aws_partition.current",
            "module.eks_west.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks_west.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks_west.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.eks_west.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks_west.module.self_managed_node_group.aws_iam_role.this",
            "module.eks_west.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.eks_west.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks_west.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks_west.module.self_managed_node_group.aws_launch_template.this",
            "module.eks_west.module.self_managed_node_group.aws_placement_group.this",
            "module.eks_west.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks_west.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks_west.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks_west.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_west.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks_west.module.self_managed_node_group.data.aws_partition.current",
            "module.eks_west.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks_west.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.eks_west.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks_west.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks_west.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks_west.time_sleep.this",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "query_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "gridgain/gg-query-client",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "gg-query-client"
                },
                "name": "gg-query-client",
                "namespace": "gridgain",
                "resource_version": "2799",
                "uid": "1527df7e-9abd-4803-b6bb-c8cdd6e38b92"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.82.153",
                "cluster_ips": [
                  "172.20.82.153"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 31503,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "gg-query-client"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a1527df7e9abd4803b6bbc8cdd6e38b9-2056078192.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "gg-query-client",
            "namespace": "gridgain"
          },
          "dependencies": [
            "aws_eks_addon.ebs_csi",
            "data.aws_secretsmanager_secret_version.gg9_license",
            "helm_release.gridgain9",
            "kubernetes_deployment.query_client",
            "kubernetes_namespace.gg9",
            "kubernetes_secret.gg9_license",
            "kubernetes_storage_class.gp3",
            "module.ebs_csi_irsa.aws_iam_policy.amazon_managed_service_prometheus",
            "module.ebs_csi_irsa.aws_iam_policy.appmesh_controller",
            "module.ebs_csi_irsa.aws_iam_policy.appmesh_envoy_proxy",
            "module.ebs_csi_irsa.aws_iam_policy.aws_gateway_controller",
            "module.ebs_csi_irsa.aws_iam_policy.cert_manager",
            "module.ebs_csi_irsa.aws_iam_policy.cluster_autoscaler",
            "module.ebs_csi_irsa.aws_iam_policy.ebs_csi",
            "module.ebs_csi_irsa.aws_iam_policy.efs_csi",
            "module.ebs_csi_irsa.aws_iam_policy.external_dns",
            "module.ebs_csi_irsa.aws_iam_policy.external_secrets",
            "module.ebs_csi_irsa.aws_iam_policy.fsx_lustre_csi",
            "module.ebs_csi_irsa.aws_iam_policy.fsx_openzfs_csi",
            "module.ebs_csi_irsa.aws_iam_policy.karpenter_controller",
            "module.ebs_csi_irsa.aws_iam_policy.load_balancer_controller",
            "module.ebs_csi_irsa.aws_iam_policy.load_balancer_controller_targetgroup_only",
            "module.ebs_csi_irsa.aws_iam_policy.mountpoint_s3_csi",
            "module.ebs_csi_irsa.aws_iam_policy.node_termination_handler",
            "module.ebs_csi_irsa.aws_iam_policy.velero",
            "module.ebs_csi_irsa.aws_iam_policy.vpc_cni",
            "module.ebs_csi_irsa.aws_iam_role.this",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.amazon_cloudwatch_observability",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.amazon_managed_service_prometheus",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.appmesh_controller",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.appmesh_envoy_proxy",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.aws_gateway_controller",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.cert_manager",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.cluster_autoscaler",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.ebs_csi",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.efs_csi",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.external_dns",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.external_secrets",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.fsx_lustre_csi",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.fsx_openzfs_csi",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.karpenter_controller",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.load_balancer_controller",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.load_balancer_controller_targetgroup_only",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.mountpoint_s3_csi",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.node_termination_handler",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.this",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.velero",
            "module.ebs_csi_irsa.aws_iam_role_policy_attachment.vpc_cni",
            "module.ebs_csi_irsa.data.aws_caller_identity.current",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.amazon_managed_service_prometheus",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.appmesh_controller",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.appmesh_envoy_proxy",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.aws_gateway_controller",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.cert_manager",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.cluster_autoscaler",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.ebs_csi",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.efs_csi",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.external_dns",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.external_secrets",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.fsx_lustre_csi",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.fsx_openzfs_csi",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.karpenter_controller",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.load_balancer_controller",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.load_balancer_controller_targetgroup_only",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.mountpoint_s3_csi",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.node_termination_handler",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.this",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.velero",
            "module.ebs_csi_irsa.data.aws_iam_policy_document.vpc_cni",
            "module.ebs_csi_irsa.data.aws_partition.current",
            "module.ebs_csi_irsa.data.aws_region.current",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_addon.before_compute",
            "module.eks.aws_eks_addon.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_identity_provider_config.this",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_policy.custom",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.additional",
            "module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.aws_iam_role_policy_attachment.custom",
            "module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_eks_addon_version.this",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.custom",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.data.tls_certificate.this",
            "module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.fargate_profile.data.aws_region.current",
            "module.eks.module.kms.aws_kms_alias.this",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_grant.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.eks.time_sleep.this",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:security-group/sg-0628efd0a85a8cf45",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0628efd0a85a8cf45",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a836705c6f53cfdc"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gg9-eks-cluster-2026010816554727220000001c",
            "name_prefix": "gg9-eks-cluster-",
            "owner_id": "007924758087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gg9-eks-cluster"
            },
            "tags_all": {
              "Name": "gg9-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:security-group/sg-0a836705c6f53cfdc",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a836705c6f53cfdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "Allow GridGain client port from West VPC",
                "from_port": 10800,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10800
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-026a9015996c79d99",
                  "sg-0aafb2d00cdb09b6c"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0628efd0a85a8cf45"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0628efd0a85a8cf45"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0628efd0a85a8cf45"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0628efd0a85a8cf45"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0628efd0a85a8cf45"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0628efd0a85a8cf45"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "gg9-eks-node-2026010816554700590000001b",
            "name_prefix": "gg9-eks-node-",
            "owner_id": "007924758087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gg9-eks-node",
              "kubernetes.io/cluster/gg9-eks": "owned"
            },
            "tags_all": {
              "Name": "gg9-eks-node",
              "kubernetes.io/cluster/gg9-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-803801667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0628efd0a85a8cf45",
            "security_group_rule_id": "sgr-0edc65e50cf55cbe7",
            "self": false,
            "source_security_group_id": "sg-0a836705c6f53cfdc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-447964675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-0e8601afcd38625e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1714579137",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-0c1b83fed1d24d1a0",
            "self": false,
            "source_security_group_id": "sg-0628efd0a85a8cf45",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3212286073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-067f57d9cbb263c93",
            "self": false,
            "source_security_group_id": "sg-0628efd0a85a8cf45",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1983250415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-089f0ff322c0f83b6",
            "self": false,
            "source_security_group_id": "sg-0628efd0a85a8cf45",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1701430222",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-06c416dd68506c544",
            "self": false,
            "source_security_group_id": "sg-0628efd0a85a8cf45",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-29945861",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-0e85e8fce055e2d33",
            "self": false,
            "source_security_group_id": "sg-0628efd0a85a8cf45",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1913154841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-0138232b2296c44f2",
            "self": false,
            "source_security_group_id": "sg-0628efd0a85a8cf45",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2912953801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-063989af162423a50",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1180487823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-024e119bf67f223ad",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3791876960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a836705c6f53cfdc",
            "security_group_rule_id": "sgr-0ba87ec2be3b269e1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_west",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:security-group/sg-0d750e6709bfdb2df",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d750e6709bfdb2df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0065efdd84c081610"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gg9-eks-west-cluster-20260108165551270800000013",
            "name_prefix": "gg9-eks-west-cluster-",
            "owner_id": "007924758087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gg9-eks-west-cluster"
            },
            "tags_all": {
              "Name": "gg9-eks-west-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_west",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:security-group/sg-0065efdd84c081610",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0065efdd84c081610",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow GridGain client port from East VPC",
                "from_port": 10800,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10800
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0be7227e79cc4060b"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d750e6709bfdb2df"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d750e6709bfdb2df"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d750e6709bfdb2df"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d750e6709bfdb2df"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d750e6709bfdb2df"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d750e6709bfdb2df"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "gg9-eks-west-node-20260108165551789500000014",
            "name_prefix": "gg9-eks-west-node-",
            "owner_id": "007924758087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gg9-eks-west-node",
              "kubernetes.io/cluster/gg9-eks-west": "owned"
            },
            "tags_all": {
              "Name": "gg9-eks-west-node",
              "kubernetes.io/cluster/gg9-eks-west": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_west",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1206858707",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d750e6709bfdb2df",
            "security_group_rule_id": "sgr-006c4dd94071bfb42",
            "self": false,
            "source_security_group_id": "sg-0065efdd84c081610",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_west",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1526275875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-06ea1288cda200cdd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4006346636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-0a65eb2ba4f5f84d5",
            "self": false,
            "source_security_group_id": "sg-0d750e6709bfdb2df",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3370961408",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-04d936f506f783bd0",
            "self": false,
            "source_security_group_id": "sg-0d750e6709bfdb2df",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-28224918",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-02fe1e6e6438c3aea",
            "self": false,
            "source_security_group_id": "sg-0d750e6709bfdb2df",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-317886903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-0f52f4961120617a5",
            "self": false,
            "source_security_group_id": "sg-0d750e6709bfdb2df",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1985192572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-03ad28e5a4c059bd7",
            "self": false,
            "source_security_group_id": "sg-0d750e6709bfdb2df",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2987337933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-0ec404babe0ca7f93",
            "self": false,
            "source_security_group_id": "sg-0d750e6709bfdb2df",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1573821259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-0f34ad7c6bf7268ed",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2579567737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-03843835a156eb567",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1033811862",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0065efdd84c081610",
            "security_group_rule_id": "sgr-0db91388b88cd23e9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_west.aws_security_group.cluster",
            "module.eks_west.aws_security_group.node",
            "module.vpc_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:network-acl/acl-0baf765bae9a954ff",
            "default_network_acl_id": "acl-0baf765bae9a954ff",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0baf765bae9a954ff",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "007924758087",
            "subnet_ids": [
              "subnet-005bc2455230caad5",
              "subnet-0693b6c4cf46aada8",
              "subnet-090f2544da240dffb",
              "subnet-0d3d2ab043aefd12f",
              "subnet-0d70210b73f95a663",
              "subnet-0ef1d9470c238b722"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-default",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-default",
              "Region": "us-east-1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:route-table/rtb-0525239cce5c9a953",
            "default_route_table_id": "rtb-0525239cce5c9a953",
            "id": "rtb-0525239cce5c9a953",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-default",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-default",
              "Region": "us-east-1"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:security-group/sg-00608fd672d11cd9e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00608fd672d11cd9e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "007924758087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-default",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-default",
              "Region": "us-east-1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:internet-gateway/igw-00eac5f550453e971",
            "id": "igw-00eac5f550453e971",
            "owner_id": "007924758087",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east",
              "Region": "us-east-1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00eac5f550453e971",
            "id": "r-rtb-014824bfbcf5792041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014824bfbcf579204",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_internet_gateway.this",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:route-table/rtb-0fdbb376c12a82d90",
            "id": "rtb-0fdbb376c12a82d90",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1a",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1a",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:route-table/rtb-0f756178fb788789d",
            "id": "rtb-0f756178fb788789d",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1b",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1b",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:route-table/rtb-046fd808969cabecf",
            "id": "rtb-046fd808969cabecf",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1c",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1c",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:route-table/rtb-014824bfbcf579204",
            "id": "rtb-014824bfbcf579204",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00eac5f550453e971",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-public",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-public",
              "Region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b74d3245af13602c",
            "route_table_id": "rtb-0fdbb376c12a82d90",
            "subnet_id": "subnet-005bc2455230caad5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_subnet.private",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abcef4d737f043bd",
            "route_table_id": "rtb-0f756178fb788789d",
            "subnet_id": "subnet-0ef1d9470c238b722"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_subnet.private",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03111a7e8a5eecca3",
            "route_table_id": "rtb-046fd808969cabecf",
            "subnet_id": "subnet-0d3d2ab043aefd12f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_subnet.private",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05860738c946621aa",
            "route_table_id": "rtb-014824bfbcf579204",
            "subnet_id": "subnet-0693b6c4cf46aada8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a174d728a569da89",
            "route_table_id": "rtb-014824bfbcf579204",
            "subnet_id": "subnet-0d70210b73f95a663"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053f3889ea7994653",
            "route_table_id": "rtb-014824bfbcf579204",
            "subnet_id": "subnet-090f2544da240dffb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:subnet/subnet-005bc2455230caad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005bc2455230caad5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1a",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1a",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:subnet/subnet-0ef1d9470c238b722",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef1d9470c238b722",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1b",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1b",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:subnet/subnet-0d3d2ab043aefd12f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3d2ab043aefd12f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1c",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-private-us-east-1c",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:subnet/subnet-0693b6c4cf46aada8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0693b6c4cf46aada8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-public-us-east-1a",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-public-us-east-1a",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:subnet/subnet-0d70210b73f95a663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d70210b73f95a663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-public-us-east-1b",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-public-us-east-1b",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:subnet/subnet-090f2544da240dffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090f2544da240dffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east-public-us-east-1c",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east-public-us-east-1c",
              "Region": "us-east-1",
              "kubernetes.io/cluster/gg9-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc4de85f36e89340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007924758087:vpc/vpc-0bc4de85f36e89340",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0baf765bae9a954ff",
            "default_route_table_id": "rtb-0525239cce5c9a953",
            "default_security_group_id": "sg-00608fd672d11cd9e",
            "dhcp_options_id": "dopt-0e04a0fe280a12740",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc4de85f36e89340",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0525239cce5c9a953",
            "owner_id": "007924758087",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-east",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-east",
              "Region": "us-east-1"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:network-acl/acl-0efe41aa3c123c5e3",
            "default_network_acl_id": "acl-0efe41aa3c123c5e3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0efe41aa3c123c5e3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "007924758087",
            "subnet_ids": [
              "subnet-0280cd91f8a727656",
              "subnet-0441efc80d512206f",
              "subnet-07ec7d54831c587d3",
              "subnet-09066e09b1eab15a7",
              "subnet-0dc93d871ddcac73d",
              "subnet-0ef17a1562634208b"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-default",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-default",
              "Region": "us-west-2"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:route-table/rtb-07030a57112f8fc16",
            "default_route_table_id": "rtb-07030a57112f8fc16",
            "id": "rtb-07030a57112f8fc16",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-default",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-default",
              "Region": "us-west-2"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:security-group/sg-0b3c64314bc2b7039",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b3c64314bc2b7039",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "007924758087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-default",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-default",
              "Region": "us-west-2"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:internet-gateway/igw-0adacf1aea44f5496",
            "id": "igw-0adacf1aea44f5496",
            "owner_id": "007924758087",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west",
              "Region": "us-west-2"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0adacf1aea44f5496",
            "id": "r-rtb-0fa6514a88a22f18b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa6514a88a22f18b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_internet_gateway.this",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:route-table/rtb-06d2580b4131a1c6f",
            "id": "rtb-06d2580b4131a1c6f",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2a",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2a",
              "Region": "us-west-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:route-table/rtb-01eece8d18d46b93b",
            "id": "rtb-01eece8d18d46b93b",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2b",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2b",
              "Region": "us-west-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:route-table/rtb-01693fcf202e2906b",
            "id": "rtb-01693fcf202e2906b",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2c",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2c",
              "Region": "us-west-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:route-table/rtb-0fa6514a88a22f18b",
            "id": "rtb-0fa6514a88a22f18b",
            "owner_id": "007924758087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adacf1aea44f5496",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f320faf02204bed2"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-public",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-public",
              "Region": "us-west-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cb1ad6232d0a6fe",
            "route_table_id": "rtb-06d2580b4131a1c6f",
            "subnet_id": "subnet-0dc93d871ddcac73d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.private",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d2819a9481ea6a9",
            "route_table_id": "rtb-01eece8d18d46b93b",
            "subnet_id": "subnet-0ef17a1562634208b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.private",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0976856c87d823848",
            "route_table_id": "rtb-01693fcf202e2906b",
            "subnet_id": "subnet-07ec7d54831c587d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.private",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0447e002c56bed4b4",
            "route_table_id": "rtb-0fa6514a88a22f18b",
            "subnet_id": "subnet-0441efc80d512206f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f52560ccc394a9c",
            "route_table_id": "rtb-0fa6514a88a22f18b",
            "subnet_id": "subnet-09066e09b1eab15a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7877df317c54c47",
            "route_table_id": "rtb-0fa6514a88a22f18b",
            "subnet_id": "subnet-0280cd91f8a727656"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:subnet/subnet-0dc93d871ddcac73d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc93d871ddcac73d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2a",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2a",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:subnet/subnet-0ef17a1562634208b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef17a1562634208b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2b",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2b",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:subnet/subnet-07ec7d54831c587d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ec7d54831c587d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2c",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-private-us-west-2c",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:subnet/subnet-0441efc80d512206f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0441efc80d512206f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-public-us-west-2a",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-public-us-west-2a",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:subnet/subnet-09066e09b1eab15a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09066e09b1eab15a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-public-us-west-2b",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-public-us-west-2b",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:subnet/subnet-0280cd91f8a727656",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0280cd91f8a727656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007924758087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west-public-us-west-2c",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west-public-us-west-2c",
              "Region": "us-west-2",
              "kubernetes.io/cluster/gg9-eks-west": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0384a3cc2b1272533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:007924758087:vpc/vpc-0384a3cc2b1272533",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0efe41aa3c123c5e3",
            "default_route_table_id": "rtb-07030a57112f8fc16",
            "default_security_group_id": "sg-0b3c64314bc2b7039",
            "dhcp_options_id": "dopt-0e9898475271371a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0384a3cc2b1272533",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07030a57112f8fc16",
            "owner_id": "007924758087",
            "tags": {
              "Environment": "poc",
              "Name": "gg9-eks-west",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "gg9-eks-west",
              "Region": "us-west-2"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}